syntax = "proto3";
option go_package = "github.com/ragul28/grpc-event-stream/event";

package event;

// Event definition
service Event {
    // Get Event - unary
    rpc GetEvent(GetEventFilter) returns (GetEventResponse) {}

    // Create new Event - unary
    rpc CreateEvent(EventRequest) returns (EventResponse) {}

    // Get all Event - server streaming
    // rpc GetEvents(GetEventFilter) returns (stream EventRequest) {}
}

// Request massage for CreateEvent
message EventRequest {
    string id = 1;
    string name = 2;
}

message EventResponse {
    string id = 1;
    bool success = 2;
}

message GetEventFilter {
    string id = 1;
}

message GetEventResponse {
    string id = 1;
    string name = 2;
}